Sun Oct 22 02:01:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Swapped the default right mouse button config. You now hold
	ctrl to pan, or don't to get menus.
	* Changed --no-menu-ctrl-mask to --menu-ctrl-mask
	* Added --no-pan-ctrl-mask
	* Use the options feh --no-pan-ctrl-mask --menu-ctrl-mask to
	simulate the old behaviour, or add that line to ~/.fehrc to keep
	it.
	* Need to change all the --*-ctrl-mask options to booleans so it
	is properly configurable, I think.

Sat Oct 21 23:22:09 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fixed the -k option (to save files viewed by http). It now saves
	the files into the *current* directory, with better filenames, eg
	feh_000001_image.jpg for a file called image.jpg.
	* Removed the use of the evil mkstemp function, not needed any
	more.

Fri Aug 25 16:41:29 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* rotation wasn't reset when image changed in fullscreen mode

Sat Aug 19 16:07:29 2000  Paul Duncan  <pabs@pablotron.org>

	* added multiple key loading to cam.  also updated the
	documentation and chnaged the version number to 0.3.

Fri Aug  4 12:09:29 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Sweet patch from Eric, changes window title to "Reloading:
	<Former title>" when reloading an image. Neato :)

Thu Aug  3 23:11:23 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Another fine patch from Eric Dorland, allows the configuration
	of the reload button, --reload-button NUM. Also patches cam to use
	button 1 to reload webcams :) Nifty ;)

Thu Aug  3 23:04:38 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Patch from David LaBissoniere <labiss@usit.net>
	Adds a --start-at NUM option for jumping to number NUM of the
	filelist (either from a file or the commandline).
	* Thanks David.

Fri Jul 28 21:07:32 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Added --scale-down to automatically scale images down if they
	are too big to fit on the screen. Only works with -P right now