@@ -1,3 +1,9 @@
+Sat Oct 28 23:32:11 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
+
+	* Better check for imlib2.
+	* Only create files in current dir if keeping http images. Ones
+	that will be deleted on exit go in /tmp.
+
 Sun Oct 22 02:01:33 2000  Tom Gilbert  <gilbertt@linuxbrit.co.uk>
 
 	* Swapped the default right mouse button config. You now hold
